Update ASM to 9.8 for Java 25 support
Signed-off-by: Christoph Obexer <cobexer@gradle.com>

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -282,3 +282,7 @@ tasks.register('nestedBuild', GradleBuild) {
 ====
 
 === Potential breaking changes
+
+==== Upgrade to ASM 9.8
+
+ASM was upgraded from 9.7.1 to https://asm.ow2.io/versions.html[9.8] to ensure earlier compatibility for Java 25.
