--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
@@ -501,7 +501,7 @@ This usage assumes that `featureA` is located at the root of your build.
 You can include projects located in nested subdirectories by specifying their full project path by using `:` as a separator between path segments.
 For instance, if project `search` was located in a subdirectory named `features`, itself located in a subdirectory named `subs`, you could call `include(":subs:features:search")` to include it.
 
-Nesting projects under a sensible hierarchical directory structure is a common practice in larger Gradle builds including more than a dozen or so projects.
+Nesting projects in a sensible hierarchical directory structure is common practice in larger Gradle builds with many projects. 
 Such a layout allows you to organize large builds and improve comprehensibility, versus having all your projects live at the root of the build.
 
 However, without further configuration, Gradle will create empty projects for every element of a hierarchical path.
