--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
@@ -504,7 +504,7 @@ For instance, if project `search` was located in a subdirectory named `features`
 Nesting projects in a sensible hierarchical directory structure is common practice in larger Gradle builds with many projects. 
 This approach helps organize large builds and improves comprehensibility, compared to placing all projects directly under the build root.
 
-However, without further configuration, Gradle will create empty projects for every element of a hierarchical path.
+However, without further configuration, Gradle will create empty projects for each element in the hierarchical path, even if some of those directories do not contain actual builds.
 In the example above, Gradle will create a project named `:subs`, a project named `:subs:features`, and a project named `:subs:features:search`.
 This probably isn't intended, as you likely only want to add a `search` project.
 
