--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/logging.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/logging.adoc
@@ -13,7 +13,7 @@
 // limitations under the License.
 
 [[logging]]
-= Logging
+= Logging and Output
 :keywords: error, quiet, warning, lifecycle, info, warn, org.gradle.logging.level, stacktrace, org.gradle.logging.stacktrace, full-stacktrace
 
 The build log is the primary way Gradle communicates what's happening during a build.
