--- a/platforms/documentation/docs/src/docs/userguide/releases/installation.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/installation.adoc
@@ -16,11 +16,12 @@
 = Installing Gradle
 :keywords: install
 
+If all you want to do is run an existing Gradle project, then you don't need to install Gradle if the build uses the <<gradle_wrapper#gradle_wrapper_reference,Gradle Wrapper>>.
+
 [[gs:installation]]
 == Gradle Installation
 
-If all you want to do is run an existing Gradle project, then you don't need to install Gradle if the build uses the <<gradle_wrapper#gradle_wrapper_reference,Gradle Wrapper>>.
-This is identifiable by the presence of the `gradlew` or `gradlew.bat` files in the root of the project:
+The Gradle Wrapper is identifiable by the presence of the `gradlew` or `gradlew.bat` files in the root of the project:
 
 [listing,subs=+macros]
 ----
@@ -282,7 +283,7 @@ Open a console (or a Windows command prompt) and run `gradle -v` to run gradle a
 ❯ gradle -v
 
 ------------------------------------------------------------
-Gradle {gradleVersion}
+Gradle 8.14.3
 ------------------------------------------------------------
 
 Build time:    2025-05-13 06:56:13 UTC
