--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -187,11 +187,13 @@ There is no direct replacement for this method.
 
 [[set-all-jvm-args]]
 ==== Deprecation of `JavaForkOptions.setAllJvmArgs()`
-The `JavaForkOptions.setAllJvmArgs()` method has been deprecated and will be removed in Gradle 10.0.0.
-Instead, do one of the following:
 
-* Use `JavaForkOptions.jvmArgs()`
-* Use `JavaForkOptions.setJvmArgs()`
+The link:{javadocPath}/org/gradle/process/JavaForkOptions.html#setAllJvmArgs(java.util.List)[`setAllJvmArgs()` method] on `JavaForkOptions` has been deprecated and will be removed in Gradle 10.0.0.
+
+Instead, use one of the following:
+
+* `JavaForkOptions.jvmArgs()`
+* `JavaForkOptions.setJvmArgs()`
 * Provide a `CommandLineArgumentProvider` to add arguments via `JavaForkOptions.getJvmArgumentProviders()`
 
 [[archives-configuration]]
